<resources>
    <string name="app_name">PCRemCont</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sound">Sound:</string>
    <string name="unmute_mute">Unmute/Mute</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="play_pause">play/pause</string>
    <string name="speak">Speak !</string>
    <string name="close_server">Close Server</string>
    <string name="port">Port</string>
</resources>
